--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* hero section start  */
+.main {
+    /* background-image: url('../img/office.jpg'); */
+    background-image: url('../img/bg_image_1.jpg');
+    background-size: cover;
+    /* background-position: center; */
+
+}
+.main_overlay{
+        background-color: black;
+        opacity: .7;
+}
+
+/* hero section start end */
