--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 /* hero section start  */
+
+
 .main {
     background-image: url('../img/bg_image_1.jpg');
     background-size: cover;
@@ -21,3 +23,10 @@
   border-radius: 20px 0px 40px 20px;  
 }
 /* custom border redious end */
+
+
+.cout-sct{
+  background-image: url(../img/bg_banner.jpg);
+  background-size: cover;
+  background-position: center;
+}
